checkcountdown.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-05-13T19:38:10Z"
  generateName: countdown-
  labels:
    controller-uid: 3df9fe72-6cca-4c95-b904-e682baad2bc8
    job-name: countdown
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:generateName: {}
        f:labels:
          .: {}
          f:controller-uid: {}
          f:job-name: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"3df9fe72-6cca-4c95-b904-e682baad2bc8"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        f:containers:
          k:{"name":"counter"}:
            .: {}
            f:command: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kube-controller-manager
    operation: Update
    time: "2020-05-13T19:38:10Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"192.168.249.164"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2020-05-13T19:38:19Z"
  name: countdown-5m9kj
  namespace: default
  ownerReferences:
  - apiVersion: batch/v1
    blockOwnerDeletion: true
    controller: true
    kind: Job
    name: countdown
    uid: 3df9fe72-6cca-4c95-b904-e682baad2bc8
  resourceVersion: "440405"
  selfLink: /api/v1/namespaces/default/pods/countdown-5m9kj
  uid: 015d7849-bd99-47aa-8739-a47a92cab517
spec:
  containers:
  - command:
    - bin/bash
    - -c
    - for i in 9 8 7 6 5 4 3 2 1 ; do echo $i ; done
    image: centos:7
    imagePullPolicy: IfNotPresent
    name: counter
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-8drc5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k8s-5947-node-03
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-8drc5
    secret:
      defaultMode: 420
      secretName: default-token-8drc5
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-05-13T19:38:10Z"
    reason: PodCompleted
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-05-13T19:38:10Z"
    reason: PodCompleted
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-05-13T19:38:10Z"
    reason: PodCompleted
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-05-13T19:38:10Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://779f01506534b8b382cfd207f74253c662e76bb3693c8ac753729935344112ff
    image: docker.io/library/centos:7
    imageID: docker.io/library/centos@sha256:e9ce0b76f29f942502facd849f3e468232492b259b9d9f076f71b392293f1582
    lastState: {}
    name: counter
    ready: false
    restartCount: 0
    started: false
    state:
      terminated:
        containerID: containerd://779f01506534b8b382cfd207f74253c662e76bb3693c8ac753729935344112ff
        exitCode: 0
        finishedAt: "2020-05-13T19:38:19Z"
        reason: Completed
        startedAt: "2020-05-13T19:38:19Z"
  hostIP: 10.5.214.28
  phase: Succeeded
  podIP: 192.168.249.164
  podIPs:
  - ip: 192.168.249.164
  qosClass: BestEffort
  startTime: "2020-05-13T19:38:10Z"
