docker-private-registry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-private-registry
  name: docker-private-registry-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-private-registry
  template:
    metadata:
      labels:
        app: docker-private-registry
    spec:
      containers:
      - image: registry:2
        imagePullPolicy: IfNotPresent
        name: docker-private-registry
        env:
        - name: REGISTRY_HTTP_ADDR
          value: 0.0.0.0:5000
        - name: REGISTRY_HTTP_TLS_CERTIFICATE
          value: /certs/cert.crt
        - name: REGISTRY_HTTP_TLS_KEY
          value: /certs/cert.key
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/registry
          name: image-store
        - mountPath: /certs
          name: certs
      volumes:
      - emptyDir: {} # THIS IS NOT PERSISTENT! WILL DELETE WITH POD!
        name: image-store
      - name: certs
        secret:
          secretName: registry-tls
          items:
          - key: tls.crt
            path: cert.crt
            mode: 256 # 0400 in decimal
          - key: tls.key
            path: cert.key
            mode: 256 # 0400 in decimal
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: docker-private-registry
  name: docker-private-registry
spec:
  ports:
  - nodePort: 30500
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: docker-private-registry
  type: NodePort

---
apiVersion: v1
kind: Secret
data:
  tls.crt:  LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZTZ0F3SUJBZ0lVY3NUekJIdnJxK0hTcFJvNEpGdjlibEM5VEkwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NERUxNQWtHQTFVRUJoTUNWVk14RlRBVEJnTlZCQWdUREZCbGJtNXplV3gyWVc1cFlURVRNQkVHQTFVRQpCeE1LU0dGeWNtbHpZblZ5WnpFVE1CRUdBMVVFQ2hNS1MzVmlaWEp1WlhSbGN6RUxNQWtHQTFVRUN4TUNRMEV4CkV6QVJCZ05WQkFNVENrdDFZbVZ5Ym1WMFpYTXdIaGNOTWpBd05URXhNakF4TnpBd1doY05NakV3TlRFeE1qQXgKTnpBd1dqQnhNUXN3Q1FZRFZRUUdFd0pWVXpFVk1CTUdBMVVFQ0JNTVVHVnVibk41YkhaaGJtbGhNUk13RVFZRApWUVFIRXdwSVlYSnlh [...]
  tls.key:  LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBeEdMZHdZQkJGaHZuUkJqR0xzVkluWG9ZS1F1aEU3eG5zTHZNRmZlUElFUUMrNDMyCkNVenI4azdQd0dOVGg0T29yVzNBSUpqSVc5S1U1aEYvYXFyU2JIYzFkTnc5QnlNeGdFYTQrZWhRQ0Rqa1JLb2sKUkh6WGV2N2pyVExWclJPQXNycTVza1NrdVVnUWJ5WGZCVFhnQjZaSHpZbFRlYXVSTWFPU0toZjJGV21kdHg3TAprWWVKdlpZMW9wS0dacUFGOHhhV1pHWjNadkdINUtaVVdWc1RKKzk3TktQeEh1eWEzalJRWTM2T1grZHdHVVV0Ckt0Q0RRYStxSDZyOEJVVjBOYzV1dTAwdUVvc045QVdWTWx5MjFNVVpQNGJUV1l0TzV1d0RaZ3VjcDNGSHVLdWEKUjM0Q3d3cXMx [...]
metadata:
  name: registry-tls
  namespace: default
type: Opaque
