webby-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice01-deploy
  labels: 
    app: webby
spec:
  selector:
    matchLabels:
      app: webby
  replicas: 4 
  template:
    metadata:
      labels:
        app: webby
    spec:
      containers:
      - name: webby
        image: reg.alta3.com/5947-kalgaonkar-webby
        ports:
        - containerPort: 8888
